fixed ul alignment

--- a/main.css
+++ b/main.css
@@ -373,7 +373,7 @@ h3{
     margin: 0px;
     padding: 0px;
     height: 18px;
-    width: 200px;
+    width: 100%;
 }
 
 #order-total{
